<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="library_text">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="practikumLink">https://practicum.yandex.ru/learn/android-developer</string>
    <string name="practikumHeader">Yandex Practucum</string>
    <string name="supportMail">mih-xrom@ya.ru</string>
    <string name="suportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="termsLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="application_not_found">Не удалось найти приложения для этого действия!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_response">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_text">Очистить текст</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_zero">00:00</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="empty_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="exit_title">Завершить создание плейлиста?</string>
    <string name="exit_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="trackss">%d треков</string>
    <string name="track">%d трек</string>
    <string name="tracks">%d трека</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_added">Добавлено в плейлист %s</string>
    <string name="playlist_not_added">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_info">%1$s минут · %2$s</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать инфорацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист \«%1$s\»?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no_track_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="emplty_playlist">В плейлисте нет треков</string>
</resources>