<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackground"
        app:contentInsetStartWithNavigation="0dp"
        app:tint="?attr/colorOnPrimary"
        app:title="@string/settings"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="?attr/colorOnPrimary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_theme"
        style="@style/SettingsViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp61"
        android:layout_marginTop="24dp"
        android:text="@string/darkTheme" />

    <TextView
        android:id="@+id/share"
        style="@style/SettingsViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp61"
        android:text="@string/share"
        app:drawableRightCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support"
        style="@style/SettingsViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp61"
        android:text="@string/support"
        app:drawableRightCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/terms"
        style="@style/SettingsViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp61"
        android:text="@string/terms"
        app:drawableRightCompat="@drawable/ic_arrow_forward" />

</LinearLayout>