<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackground"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/search_text"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="?attr/colorOnPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginVertical="@dimen/dp8">

        <EditText
            android:id="@+id/search_bar"
            style="@style/SearchEditViewStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:text="WWwwwWWWWWWWwWWWwwwWWWwwwWWW" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/clear_text"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel_icon"
            android:visibility="gone"
            app:tint="?attr/colorOnContainer" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16"
        tools:listitem="@layout/item_search"
        android:visibility="gone">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/placeholder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            tools:src="@drawable/ic_nothing_found" />

        <TextView
            android:id="@+id/placeholder_message"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_19sp"
            tools:text="@string/something_went_wrong" />

        <Button
            android:id="@+id/update_response"
            style="@style/SearchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_response" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="@dimen/dp24"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/history_title"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_history_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp8"
            android:layout_weight="1"
            tools:listitem="@layout/item_search">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/clear_history"
            style="@style/SearchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history" />
    </LinearLayout>

</LinearLayout>