<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".player.ui.TrackPlayerFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackground"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="?attr/colorOnPrimary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp24" />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp26"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_cover_placeholder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/queue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:scaleType="center"
        android:src="@drawable/ic_queue"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/round_button"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toStartOf="@id/favorite_btn"
        app:layout_constraintStart_toEndOf="@id/queue_btn"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/playing_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        tools:text="00:30" />

    <TextView
        android:id="@+id/duration_label"
        style="@style/PlayerTextLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playing_time" />

    <TextView
        android:id="@+id/album_label"
        style="@style/PlayerTextLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year_label"
        app:layout_constraintEnd_toStartOf="@id/album"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/duration_label" />

    <TextView
        android:id="@+id/year_label"
        style="@style/PlayerTextLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/album_label" />

    <TextView
        android:id="@+id/genre_label"
        style="@style/PlayerTextLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/year_label" />

    <TextView
        android:id="@+id/country_label"
        style="@style/PlayerTextLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/genre_label" />

    <TextView
        android:id="@+id/duration"
        style="@style/PlayerTextRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playing_time"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        style="@style/PlayerTextRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp30"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/album_label"
        app:layout_constraintTop_toBottomOf="@id/duration"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        style="@style/PlayerTextRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/album"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre"
        style="@style/PlayerTextRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/year"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country"
        style="@style/PlayerTextRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/genre"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>